<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    tools:context="com.jhcernuda.tresenraya.MainActivity"
    android:background="@drawable/fondo">

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/titulo"
            android:text="@string/app_name"/>

        <Button
            style="@style/boton"
            android:id="@+id/unjug"
            android:text="@string/un_jugador"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config">

            <RadioButton
                style="@style/radio"
                android:id="@+id/facil"
                android:text="@string/facil"/>

            <RadioButton
                style="@style/radio"
                android:id="@+id/normal"
                android:text="@string/normal"
                android:checked="true"/>

            <RadioButton
                style="@style/radio"
                android:id="@+id/imposible"
                android:text="@string/imposible"/>

        </RadioGroup>

        <Button
            android:id="@+id/dosjug"
            android:text="@string/dos_jugadores"
            style="@style/boton"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="0.4"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3"
        android:id="@+id/tablero">

    </GridLayout>

</LinearLayout>
